internal/builder/testdata/single/path/exact.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exact-path-demo
spec:
  rules:
    - host: example.host.com
      http:
        paths:
          - path: /foo
            pathType: Exact
            backend:
              serviceName: service1
              servicePort: 80
