internal/builder/testdata/single/path/non_path_type.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: non-path-type-demo
spec:
  rules:
    - host: example.host.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 80
