internal/builder/testdata/single/path/prefix.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prefix-path-demo
spec:
  rules:
    - host: example.host.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              serviceName: service1
              servicePort: 80
